--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-color: whitesmoke;
+    background-color: gainsboro;
 }
 
 h1 {
@@ -50,7 +50,7 @@ th, td {
     padding: 20px;
 }
 
-.hermit {
+.spin {
     display: block;
     margin-left: auto;
     margin-right: auto;
